Left Seli panel Seli learning platform panel styled. User information warning for special keyword #74.

--- a/SELI-Platform/client/stylesheet/variables.css
+++ b/SELI-Platform/client/stylesheet/variables.css
@@ -21,6 +21,7 @@
   --sub-option-font-size: 0.7em;
   --menu-hover: #17202A;
   --menu-indent: 2vw;
+  --menu-seli-title-height: 150px;
 
   /* Presentation */
   --slider-progress-size: 15px;
