--- a/SELI-Platform/client/stylesheet/media-player.css
+++ b/SELI-Platform/client/stylesheet/media-player.css
@@ -1,12 +1,3 @@
-.fullscreen-media-container {
-  width: 100%;
-  height: 100%;
-  background-color: #424242;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .media-player-container {
   width: 100vw;
   height: calc(100vh - var(--app-bar-height) - 1px);
@@ -22,6 +13,24 @@
   justify-content: center;
   align-items: center;
   overflow-y: hidden;
+}
+
+.fullscreen-media-container {
+  width: 100%;
+  height: 100%;
+  background-color: #424242;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.fullscreen-media-container-stepper {
+  width: 100%;
+  height: calc(100% - 48px);
+  background-color: #424242;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .media-player-controllers-container {
@@ -155,37 +164,29 @@
 .media-a11y-container {
   background-color: #424242;
   width: 35vw;
+  overflow-y: auto;
 }
 
 .image-media-player-paper {
   width: 100vw !important;
-  height: calc(100vh - var(--app-bar-height) - 1px) !important;
+  height: 100%!important;
   display: flex;
   justify-content: center;
   align-items: center;
   animation: fadeInLeft 0.5s;
   background-color: black !important;
+  object-fit: contain;
 }
 
 .image-media-player-paper-a11y {
   width: 65vw !important;
-  height: calc(100vh - var(--app-bar-height) - 1px) !important;
+  height: 100% !important;
   display: flex;
   justify-content: center;
   align-items: center;
   animation: fadeInLeft 0.5s;
   background-color: black !important;
-}
-
-.image-media-show {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
+  object-fit: contain;
 }
 
 .media-player-pop-menu-time {
@@ -197,24 +198,36 @@
   background-color: #424242;
 }
 
+.media-mobile-stepper {
+  background-color: var(--app-bar-color) !important;
+  color: #f5f5f5 !important;
+}
+
+.media-mobile-stepper-button {
+  color: #f5f5f5 !important;
+}
+
 /* Media Queries: Tablet Landscape */
 @media screen and (max-width: 1080px) {
   .fullscreen-media-container {
-    display: inline;
+    display: block;
     height: 100% !important;
+  }
+  .fullscreen-media-container-stepper {
+    display: block;
+    height: calc(100% - 48px) !important;
   }
   .video-media-player-a11y {
     width: 100vw !important;
-    height: calc(50vh - var(--app-bar-height)) !important;
+    height: 50% !important;
   }
   .image-media-player-paper-a11y {
     width: 100vw !important;
-    height: calc(50vh - var(--app-bar-height)) !important;
+    height: 50% !important;
   }
   .media-a11y-container {
     width: 100vw;
-    height: calc(50vh - 1px) !important;
-    overflow-y: scroll;
+    height: 50% !important;
   }
   .media-player-controllers-container {
     width: 100vw;
@@ -226,7 +239,7 @@
     width: 100vw;
     padding: 0 0vw;
     height: 50px;
-    bottom: calc(50vh - 1px);
+    bottom: 50%;
   }
   .media-player-icon {
     position: absolute;
