--- a/SELI-Platform/client/stylesheet/templates.css
+++ b/SELI-Platform/client/stylesheet/templates.css
@@ -118,9 +118,7 @@
 .template-image-gallery-preview {
   width: 300px;
   height: 268px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  object-fit: cover;
 }
 
 .template-video-gallery-preview {
