--- a/SELI-Platform/client/stylesheet/item-cards.css
+++ b/SELI-Platform/client/stylesheet/item-cards.css
@@ -99,10 +99,10 @@
 }
 
 .course-item-audio-card-controls2 {
+  width: calc(100% - 1vw);
   margin-top: 0.5vh !important;
-  margin-bottom: 0.5vh !important;
   justify-content: flex-start !important;
-  padding: 0 0.5vh !important;
+  padding: 0 0.5vw !important;
 }
 
 .course-item-audio-card-image {
