--- a/SELI-Platform/client/stylesheet/presentation.css
+++ b/SELI-Platform/client/stylesheet/presentation.css
@@ -138,6 +138,33 @@
   color: #eeeeee;
 }
 
+#dashboard-5 .dashboard-center-container {
+  width: 100%;
+  margin-left: 0 !important;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 5vh 0;
+  color: white !important;
+  background-color: #333;
+  opacity: 70%;
+}
+
+#dashboard-5 .dashboard-center-container .dashboard-paragraph {
+  width: 40%;
+  font-size: 1.25em;
+  color:  white;
+}
+
+#dashboard-5 .dashboard-link-button-white{
+ color: white;
+}
+
+#dashboard-5 {
+  background-image: url(005.jpg);
+}
+
 .slider-container {
   width: 100vw;
   height: auto;
