--- a/SELI-Platform/client/stylesheet/item-cards.css
+++ b/SELI-Platform/client/stylesheet/item-cards.css
@@ -165,7 +165,7 @@ display: flex;
   margin-left: 20px;
 }
 
-.show-hide-transciption {
+.show-hide-transcription {
   margin-top: 5px;
   animation: fadeInDown 0.5s;
 }
