--- a/SELI-Platform/client/stylesheet/presentation.css
+++ b/SELI-Platform/client/stylesheet/presentation.css
@@ -148,7 +148,7 @@
   padding: 5vh 0;
   color: white !important;
   background-color: #333;
-  opacity: 70%;
+  opacity: 0.7;
 }
 
 #dashboard-5 .dashboard-center-container .dashboard-paragraph {
