Course - Image Gallery and Images #160

--- a/SELI-Platform/client/stylesheet/media-player.css
+++ b/SELI-Platform/client/stylesheet/media-player.css
@@ -25,7 +25,7 @@
 }
 
 .fullscreen-media-container-stepper {
-  width: 100%;
+  width: 100% !important;
   height: calc(100% - 48px);
   background-color: #424242;
   display: flex;
