--- a/SELI-Platform/client/stylesheet/item.css
+++ b/SELI-Platform/client/stylesheet/item.css
@@ -313,10 +313,11 @@
 /* Link */
 
 .link-content-item {
-  width: 100% !important;
+  width: calc(100% - 5%) !important;
   height: auto;
   cursor: pointer;
   transition: 0.5s;
+  margin: 2.5vh 2.5%;
 }
 
 .link-content-item:hover {
@@ -325,7 +326,6 @@
 
 .link-item-container-html {
   width: 95%;
-  padding: 2.5vh 2.5%;
 }
 
 .link-item-container {
@@ -352,14 +352,18 @@
 
 .pdf-item-container {
   width: 100%;
+  min-height: 80px;
+  display: flex;
   align-items: center;
 }
 
 .pdf-item {
   width: auto;
-  height: 80px;
   display: flex;
   align-items: center;
+  position: absolute;
+  right: 2vw;
+  top: 12px;
 }
 
 .file-dial-container {
@@ -367,7 +371,6 @@
   height: 100% !important;
   flex-direction: row-reverse !important;
   align-items: center;
-  margin-right: 1.5vw;
 }
 
 .MuiSpeedDial-actions.MuiSpeedDial-directionRight {
@@ -375,7 +378,6 @@
 }
 
 .item-instruction-column {
-  margin-top: 15px;
   width: auto;
 }
 
@@ -389,7 +391,7 @@
 }
 
 .instruction-title {
-  width: 90%;
+  width: calc(100% - 4vw - 60px);
   margin: 0vh 2vw;
 }
 
