--- a/SELI-Platform/client/stylesheet/item-cards.css
+++ b/SELI-Platform/client/stylesheet/item-cards.css
@@ -12,15 +12,17 @@
 }
 
 .course-item-video-card-media-action-area {
-  display: flex !important;
+  display: flex;
   align-items: center;
+  height: auto;
   padding: 0.5vh 0;
   background-color: rgba(255, 255, 255, 0);
 }
 
 .course-item-video-card-media-action-area-template {
-  display: flex !important;
+  display: flex;
   align-items: center;
+  height: auto;
   padding: 0.5vh 0;
   background-color: rgba(255, 255, 255, 0);
 }
