A11y audio player New audio player was created for 1yyy purposes. Labels button fields for aria alternatives were created. Key navigation tested. Pla, volume and download controls tested, Styles designed for new wireframe audio player.

--- a/SELI-Platform/client/stylesheet/course-requirements.css
+++ b/SELI-Platform/client/stylesheet/course-requirements.css
@@ -13,7 +13,7 @@
 }
 
 .list-subheader {
-  padding: 1.5vh 0 !important;
+  padding: 1vh 1.5vw !important;
   background-color: #fafafa !important;
 }
 
@@ -85,5 +85,8 @@
   .form-input-list {
     width: calc(100% - 2vw) !important;
     padding: 0 1vw !important;
+  }
+  .list-subheader {
+    padding: 0vh 1.5vw !important;
   }
 }
