General fixes Image gallery hover selection corrected. Navigation tool corrected, rendering updating fixed. Navigation in student side corrected for course structure changes. Now it is possible to have tasks when user select without template option.

--- a/SELI-Platform/client/stylesheet/templates.css
+++ b/SELI-Platform/client/stylesheet/templates.css
@@ -99,13 +99,8 @@
   justify-content: center;
 }
 
-.template-paper-gallery-preview-selected {
-  width: 300px;
-  height: 300px;
-  position: relative;
-  cursor: pointer;
-  align-items: center;
-  justify-content: center;
+.template-paper-gallery-preview:hover,
+.template-paper-gallery-preview:focus-within {
   transform: scale(1.05);
   transition: 0.25s;
 }
