--- a/SELI-Platform/client/stylesheet/item.css
+++ b/SELI-Platform/client/stylesheet/item.css
@@ -150,20 +150,13 @@
   justify-content: center;
 }
 
-.image-item-container {
+.media-item-container {
   width: calc(100% - 30px);
   padding: 10px 15px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-}
-
-.image-item-container-template {
-  width: calc(100% - 30px);
-  padding: 10px 15px;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
+  position: relative;
 }
 
 .file-image-preview-image {
@@ -657,7 +650,7 @@ summary:hover {
 
 /* Media Queries: Tablet Landscape */
 @media screen and (max-width: 1080px) {
-  .image-item-container {
+  .media-item-container {
     display: inline;
   }
   .course-creator-item-video-card-preview-player {
@@ -665,9 +658,4 @@ summary:hover {
     height: 200px !important;
     padding: 0.5vh 0 !important;
   }
-} 
-@media screen and (max-width: 1600px) {
-  .image-item-container-template {
-    display: inline;
-  }
-} 
+}
